<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wendy.stappchofer.RegistroUsuarios">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtRegistroTitulo"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtRegistroNombre"
        android:id="@+id/textView5"
        android:layout_marginTop="25dp"

        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtRegistroApellido"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtRegistroUsuario"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtRegistroPass"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/RtxtPassword"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtRegistroPassR"
        android:id="@+id/textView9"
        android:textStyle="bold"
        android:layout_below="@+id/RtxtPassword"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/RtxtPassR"
        android:layout_below="@+id/RtxtPassword"
        android:layout_toRightOf="@+id/textView9"
        android:hint="Confirmar Password Numerica"
        android:text="12" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/RtxtPassword"
        android:layout_below="@+id/RtxtUsuario"
        android:layout_toRightOf="@+id/textView9"
        android:hint="Password Numerica"
        android:text="12" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/RtxtUsuario"
        android:layout_below="@+id/RtxtApellido"
        android:layout_toRightOf="@+id/textView9"
        android:hint="Usuario"
        android:text="ewrer" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/RtxtApellido"
        android:layout_below="@+id/RtxtNombre"
        android:layout_toRightOf="@+id/textView9"
        android:hint="Apellido"
        android:text="dfsdfds" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/RtxtNombre"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView9"
        android:hint="Nombre"
        android:text="Rubi" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnGuardar"
        android:id="@+id/RbtnGuardar"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
