<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wendy.stappchofer.Rutas"
    android:background="#8a0909">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtRutaCamionero"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="#f9ffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtNumCamion"
        android:id="@+id/textView11"
        android:layout_marginTop="110dp"
        android:textStyle="bold"
        android:textColor="#f9ffffff"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtRutaCam"
        android:id="@+id/textView12"
        android:textColor="#f9ffffff"
        android:textStyle="bold"
        android:layout_above="@+id/spinnerRuta"
        android:layout_alignParentStart="true" />



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="ACEPTAR"
        android:id="@+id/aceptar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etNumeroCamion"
        android:textColor="#f9ffffff"
        android:layout_alignTop="@+id/textView11"
        android:layout_toEndOf="@+id/textView11" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerRuta"
        android:background="#f9ffffff"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/etNumeroCamion" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvResultado"
        android:layout_below="@+id/spinnerRuta"
        android:layout_alignParentStart="true"
        android:layout_marginTop="83dp" />
</RelativeLayout>
